--- a/webserver/index.html
+++ b/webserver/index.html
@@ -59,7 +59,28 @@
       </div>
 
       <div class="span10">
-        <h3>Content</h3>
+        <!-- h3>Content</h3 -->
+
+        <ul class="thumbnails">
+          <li class="span3">
+            <h4>Lorem Ipsum</h4>
+            <a href="#" class="thumbnail">
+              <img src="http://placehold.it/260x180" alt="">
+            </a>
+          </li>
+          <li class="span3">
+            <h4>Lorem Ipsum</h4>
+            <a href="#" class="thumbnail">
+              <img src="http://placehold.it/260x180" alt="">
+            </a>
+          </li>
+          <li class="span3">
+            <h4>Lorem Ipsum</h4>
+            <a href="#" class="thumbnail">
+              <img src="http://placehold.it/260x180" alt="">
+            </a>
+          </li>
+        </ul>
 
         <div class="pagination pagination-centered">
           <ul>
